added login redirect url

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -39,7 +39,7 @@
 
                 <div>
                     <input type="submit" value="Login" class="btn btn-default center-block"/>
-                    <input type="hidden" name="next" value="{{ next }}"/>
+{#                    <input type="hidden" name="next" value="{{ next }}"/>#}
                 </div>
             </form>
 
