added comments on views

--- a/templates/fleet_management/index.html
+++ b/templates/fleet_management/index.html
@@ -22,6 +22,7 @@
                 <div class="row text-center">
                 <div class="col-md-3">
                     <div class="coder-counter-box">
+                        <p>total</p>
                         <h2>{{ count }}</h2>
                         <p>{{ item }}</p>
                     </div>
